--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+
+
+.card {
+  border-radius: var(--bs-radius) !important;
+  padding: 1.5rem;
+  box-shadow: 0px 4px 7px 0px rgba(0, 0, 0, 0.25);
+  margin-bottom: 1.2rem;
+  color: var(--secondary-dark-gray);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card .card_header {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: var(--secondary-dark-gray);
+  padding-bottom: 1rem;
+  line-height: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.card_header img {
+  padding-right: 0.71rem;
+  height: 1.25rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card_header .actions_area {
+  flex-grow: 1;
+  text-align: right;
+}
+.card_header .actions_area > * {
+  margin-left: 0.8rem;
+  cursor: pointer;
+}
+
+.card .card_body {
+  padding-top: 0.43rem;
 }
