--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
-
-
 .card {
-  border-radius: var(--bs-radius) !important;
+  border-radius: 7px !important;
   padding: 1.5rem;
   box-shadow: 0px 4px 7px 0px rgba(0, 0, 0, 0.25);
   margin-bottom: 1.2rem;
